--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /:/sharedFolder
+      - C:/:/sharedFolder
     environment:
       - REFERENCE_GENOME=Arabidopsis_thaliana
