--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - "C:/artMAP/sharedFolder"
+      - C:/artMAP/sharedFolder
     environment:
-      - "REFERENCE_GENOME=Arabidopsis_thaliana"
+      - REFERENCE_GENOME=Arabidopsis_thaliana
